0.6e
 - Support for FEF-3 HUD version, sorry, forgot previously.
 - Support for Bulleid Q1, see the steamers section in the readme.
 - Further modifications in a way the overlay is configured
   (similar to the joystick part, autodetections first, then locos).
 - Range added to all GenerateEqualNotches calls, even the {0,1} cases.
 - Minor changes here and there.
 - README updated again. I remind you that I constantly update it when
   adding some new functionality or changing something substantially.

0.6d
 - FEF-3 support. Not all controls are in the HUD simply because there
   is too many of them, but all that are used during normal startup,
   firing and driving are.
 - Separate Blowers for J94
 - Experimental green speed indicator when speed is up to 5 units
   (mph/kph) below the speed limit.

0.6
 - WARNING: some of my internal configurations have changed a little.
   If you rely on them have a look in the locoss sections.
 - Made an optiom for the program to treat driving backwards as forwards
   (Shift-Alt-S). Very usefull for some locos/scenarios where you have to
   drive backwards for longer periods of time.
 - New axes for the joystick: Small Ejector, HandBrake, Blower, Damper.
   Very usefull for 3rd party realistic locos (e.g. VictoryWorks).
 - Big optimization in the LUA overlay code. Don't check for existance
   of ControlValues per iteration. Check this info only once on loco
   initialization.
 - Inclusion of DataExtractor. New version, integrated in the main
   package. Thanks CobraOne.
 - Separate units detection for brakes. Now a loco displays properly
   BAR/PSI if it has brakes that use both.
 - SteamHeating indicator.
 - Detections and notches configurations for more locos I bought recently.
 - Cleanups in my own configs, they wont take precedence over axes set
   explicitly. ReplaceControls() function for this. They are grouped
   under "Havner's config" comments.

0.5