@@ -1,6 +1,7 @@
 0.6e
  - Support for FEF-3 HUD version, sorry, forgot previously.
  - Support for Bulleid Q1, see the steamers section in the readme.
+ - Stoking, ExhaustWater, LiveWater added to axes controls
  - Further modifications in a way the overlay is configured
    (similar to the joystick part, autodetections first, then locos).
  - Range added to all GenerateEqualNotches calls, even the {0,1} cases.
